Create nym-lp-speedtest crate scaffold
- Created tools/nym-lp-speedtest/ with Cargo.toml
- Added main.rs with CLI argument parsing
- Created stub modules: client.rs, speedtest.rs, topology.rs
- Added to workspace members
- Verified compilation with cargo check

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -164,6 +164,7 @@ members = [
     "tools/internal/validator-status-check",
     "tools/nym-cli",
     "tools/nym-id-cli",
+    "tools/nym-lp-speedtest",
     "tools/nym-nr-query",
     "tools/nymvisor",
     "tools/ts-rs-cli",
