--- a/tools/nym-lp-speedtest/Cargo.toml
+++ b/tools/nym-lp-speedtest/Cargo.toml
@@ -37,3 +37,4 @@ nym-sphinx-params = { path = "../../common/nymsphinx/params" }
 nym-sphinx-types = { path = "../../common/nymsphinx/types" }
 nym-topology = { path = "../../common/topology" }
 nym-validator-client = { path = "../../common/client-libs/validator-client" }
+nym-registration-client = { path = "../../nym-registration-client" }
