--- a/Cargo.toml
+++ b/Cargo.toml
@@ -164,7 +164,7 @@ members = [
     "tools/internal/validator-status-check",
     "tools/nym-cli",
     "tools/nym-id-cli",
-    "tools/nym-lp-speedtest",
+    "tools/nym-lp-client",
     "tools/nym-nr-query",
     "tools/nymvisor",
     "tools/ts-rs-cli",
