--- a/tools/nym-lp-client/Cargo.toml
+++ b/tools/nym-lp-client/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "nym-lp-speedtest"
+name = "nym-lp-client"
 version = "0.1.0"
 edition = "2021"
-description = "LP+KCP mixnet speedtest client"
+description = "LP+KCP mixnet client"
 license.workspace = true
 
 [[bin]]
-name = "nym-lp-speedtest"
+name = "nym-lp-client"
 path = "src/main.rs"
 
 [dependencies]
