--- a/service-providers/ip-packet-router/Cargo.toml
+++ b/service-providers/ip-packet-router/Cargo.toml
@@ -24,6 +24,7 @@ nym-crypto = { path = "../../common/crypto" }
 nym-exit-policy = { path = "../../common/exit-policy" }
 nym-id = { path = "../../common/nym-id" }
 nym-ip-packet-requests = { path = "../../common/ip-packet-requests" }
+nym-kcp = { path = "../../common/nym-kcp" }
 nym-network-defaults = { path = "../../common/network-defaults" }
 nym-network-requester = { path = "../network-requester" }
 nym-sdk = { path = "../../sdk/rust/nym-sdk" }
