feat(lp-client): wrap payload in IpPacketRequest before KCP
- Add nym-ip-packet-requests and bytes dependencies
- Wrap payload in IpPacketRequest::new_data_request() before sending to KCP
- Add LP_DATA_PORT constant (51264) and lp_data_address field to GatewayInfo

This ensures IPR can properly parse incoming messages as DataRequest.
LP framing (wrapping Sphinx in LP before sending) is a separate task.

--- a/tools/nym-lp-client/Cargo.toml
+++ b/tools/nym-lp-client/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/main.rs"
 
 [dependencies]
 anyhow = "1"
+bytes = { workspace = true }
 clap = { version = "4", features = ["derive"] }
 rand = { workspace = true }
 rand_chacha = { workspace = true }
@@ -38,3 +39,4 @@ nym-sphinx-types = { path = "../../common/nymsphinx/types" }
 nym-topology = { path = "../../common/topology" }
 nym-validator-client = { path = "../../common/client-libs/validator-client" }
 nym-registration-client = { path = "../../nym-registration-client" }
+nym-ip-packet-requests = { path = "../../common/ip-packet-requests" }
