--- a/tools/internal/testnet-manager/Cargo.toml
+++ b/tools/internal/testnet-manager/Cargo.toml
@@ -8,6 +8,8 @@ documentation.workspace = true
 edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
+publish = false
+
 
 [dependencies]
 anyhow.workspace = true
