--- a/common/nym-connection-monitor/Cargo.toml
+++ b/common/nym-connection-monitor/Cargo.toml
@@ -7,6 +7,7 @@ homepage.workspace = true
 documentation.workspace = true
 edition.workspace = true
 license.workspace = true
+publish = false
 
 [lints]
 workspace = true
