--- a/documentation/autodoc/Cargo.toml
+++ b/documentation/autodoc/Cargo.toml
@@ -7,6 +7,7 @@ homepage.workspace = true
 documentation.workspace = true
 edition.workspace = true
 license.workspace = true
+publish = false
 
 [dependencies]
 env_logger = { workspace = true }
