--- a/gateway/Cargo.toml
+++ b/gateway/Cargo.toml
@@ -12,6 +12,7 @@ authors = [
 description = "Implementation of the Nym Mixnet Gateway"
 edition = "2021"
 rust-version = "1.85"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
