--- a/nym-api/Cargo.toml
+++ b/nym-api/Cargo.toml
@@ -8,6 +8,7 @@ version.workspace = true
 authors.workspace = true
 edition = "2021"
 rust-version.workspace = true
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
