--- a/nym-credential-proxy/vpn-api-lib-wasm/Cargo.toml
+++ b/nym-credential-proxy/vpn-api-lib-wasm/Cargo.toml
@@ -7,6 +7,7 @@ homepage.workspace = true
 documentation.workspace = true
 edition.workspace = true
 license.workspace = true
+publish = false
 
 [lib]
 crate-type = ["cdylib", "rlib"]
