--- a/nyx-chain-watcher/Cargo.toml
+++ b/nyx-chain-watcher/Cargo.toml
@@ -12,6 +12,7 @@ edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 readme.workspace = true
+publish = false
 
 [dependencies]
 anyhow = { workspace = true }
