--- a/tools/echo-server/Cargo.toml
+++ b/tools/echo-server/Cargo.toml
@@ -8,7 +8,7 @@ documentation.workspace = true
 edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
-
+publish = false
 
 [[bin]]
 name = "echo-server"
