--- a/tools/internal/contract-state-importer/importer-contract/Cargo.toml
+++ b/tools/internal/contract-state-importer/importer-contract/Cargo.toml
@@ -8,7 +8,7 @@ documentation.workspace = true
 edition.workspace = true
 license.workspace = true
 readme.workspace = true
-
+publish = false
 
 [lib]
 crate-type = ["cdylib", "rlib"]
