--- a/tools/internal/testnet-manager/dkg-bypass-contract/Cargo.toml
+++ b/tools/internal/testnet-manager/dkg-bypass-contract/Cargo.toml
@@ -5,6 +5,7 @@ edition = { workspace = true }
 authors = { workspace = true }
 license = { workspace = true }
 repository = { workspace = true }
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
