--- a/tools/nym-cli/Cargo.toml
+++ b/tools/nym-cli/Cargo.toml
@@ -4,6 +4,7 @@ version = "1.1.68"
 authors.workspace = true
 edition = "2021"
 license.workspace = true
+publish = false
 
 [dependencies]
 base64 = { workspace = true }
