rename import based on rename of contracts-common dep

--- a/common/cosmwasm-smart-contracts/coconut-dkg/Cargo.toml
+++ b/common/cosmwasm-smart-contracts/coconut-dkg/Cargo.toml
@@ -13,8 +13,8 @@ cw-utils = { workspace = true }
 cw2 = { workspace = true }
 cw4 = { workspace = true }
 
-contracts-common = { path = "../contracts-common", package = "nym-contracts-common" }
-nym-multisig-contract-common = { path = "../multisig-contract" }
+nym-contracts-common = { workspace = true,  package = "nym-contracts-common" }
+nym-multisig-contract-common = { workspace = true }
 
 [features]
 schema = []
