--- a/common/cosmwasm-smart-contracts/coconut-dkg/Cargo.toml
+++ b/common/cosmwasm-smart-contracts/coconut-dkg/Cargo.toml
@@ -3,6 +3,7 @@ name = "nym-coconut-dkg-common"
 version.workspace = true
 edition = "2021"
 license.workspace = true
+description = "Common crate for Nym's DKG cosmwasm contract"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
