--- a/common/http-api-client/Cargo.toml
+++ b/common/http-api-client/Cargo.toml
@@ -38,10 +38,10 @@ bytes = { workspace = true }
 encoding_rs = { workspace = true }
 mime = { workspace = true }
 
-nym-http-api-common = { path = "../http-api-common", default-features = false }
-nym-bin-common = { path = "../bin-common" }
-nym-network-defaults = { path = "../network-defaults", optional = true }
-nym-http-api-client-macro = { path = "../http-api-client-macro" }
+nym-http-api-common = { workspace = true }
+nym-bin-common = { workspace = true }
+nym-network-defaults = { workspace = true, optional = true }
+nym-http-api-client-macro = { workspace = true }
 
 [target."cfg(not(target_arch = \"wasm32\"))".dependencies]
 hickory-resolver = { workspace = true, features = ["https-ring", "tls-ring", "webpki-roots"] }
