--- a/common/ledger/Cargo.toml
+++ b/common/ledger/Cargo.toml
@@ -3,6 +3,7 @@ name = "nym-ledger"
 version.workspace = true
 edition = "2021"
 license.workspace = true
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
