--- a/common/nymsphinx/Cargo.toml
+++ b/common/nymsphinx/Cargo.toml
@@ -14,15 +14,15 @@ rand_distr = { workspace = true }
 rand_chacha = { workspace = true }
 thiserror = { workspace = true }
 
-nym-sphinx-acknowledgements = { path = "acknowledgements" }
-nym-sphinx-addressing = { path = "addressing" }
-nym-sphinx-anonymous-replies = { path = "anonymous-replies" }
-nym-sphinx-chunking = { path = "chunking" }
-nym-sphinx-cover = { path = "cover" }
-nym-sphinx-forwarding = { path = "forwarding" }
-nym-sphinx-params = { path = "params" }
-nym-sphinx-routing = { path = "routing" }
-nym-sphinx-types = { path = "types" }
+nym-sphinx-acknowledgements = { workspace = true }
+nym-sphinx-addressing = { workspace = true }
+nym-sphinx-anonymous-replies = { workspace = true }
+nym-sphinx-chunking = { workspace = true }
+nym-sphinx-cover = { workspace = true }
+nym-sphinx-forwarding = { workspace = true }
+nym-sphinx-params = { workspace = true }
+nym-sphinx-routing = { workspace = true }
+nym-sphinx-types = { workspace = true }
 
 # those dependencies are due to intriducing preparer and receiver. Perpaphs that indicates they should be moved
 # to separate crate?
