--- a/ansible/nym-node/roles/nginx/tasks/main.yml
+++ b/ansible/nym-node/roles/nginx/tasks/main.yml
@@ -1,3 +1,4 @@
+---
 - name: Install nginx and certbot
   apt:
     name:
@@ -17,45 +18,60 @@
   template:
     src: landing.html.j2
     dest: "/var/www/{{ hostname }}/index.html"
-
-- name: Remove default nginx site
-  file:
-    path: /etc/nginx/sites-enabled/default
-    state: absent
+  notify: Reload nginx
 
 - name: Add bare-bones nginx template
   template:
     src: nginx-site.conf.j2
     dest: "/etc/nginx/sites-available/{{ hostname }}"
+  notify: Reload nginx
 
 - name: Enable nginx config
   file:
     src: "/etc/nginx/sites-available/{{ hostname }}"
     dest: "/etc/nginx/sites-enabled/{{ hostname }}"
     state: link
+  notify: Reload nginx
 
 - name: Validate nginx configuration
   command: nginx -t
   changed_when: false
 
-- name: Obtain SSL certificate
-  command:
-    cmd: "certbot --nginx --non-interactive --agree-tos --redirect -m {{ email }} -d {{ hostname }}"
+- name: Obtain SSL certificate (non-fatal)
+  block:
+    - name: Obtain SSL certificate
+      command:
+        cmd: "certbot --nginx --non-interactive --agree-tos --redirect -m {{ email }} -d {{ hostname }}"
+      register: certbot_result
+      changed_when: "'Congratulations' in certbot_result.stdout"
+      notify: Reload nginx
+  rescue:
+    - name: Certbot failed, leaving HTTP config in place
+      debug:
+        msg: "Certbot failed; keeping nginx running with current HTTP config so the site stays reachable."
 
 - name: Add wss config from nginx template
   template:
     src: wss-config.conf.j2
     dest: "/etc/nginx/sites-available/nym-wss-config"
+  notify: Reload nginx
 
 - name: Enable WSS config
   file:
     src: "/etc/nginx/sites-available/nym-wss-config"
     dest: "/etc/nginx/sites-enabled/nym-wss-config"
     state: link
+  notify: Reload nginx
 
 - name: Validate nginx config after wss
   command: nginx -t
   changed_when: false
 
-- name: Restart nginx to apply changes
-  service: name=nginx state=restarted enabled=yes
+- name: Ensure nginx is enabled and running
+  service:
+    name: nginx
+    state: started
+    enabled: yes
+
+- name: Flush handlers (apply reloads after successful config tests)
+  meta: flush_handlers
