make systemd template case sensitive

--- a/ansible/nym-node/roles/tunnel/tasks/main.yml
+++ b/ansible/nym-node/roles/tunnel/tasks/main.yml
@@ -1,14 +1,11 @@
-- name: Download network-tunnel-manager.sh
-  tags: network tunnel manager
-  get_url:
-    url: "{{ tunnel_manager_url }}"
-    dest: "/root/nym-binaries/network-tunnel-manager.sh"
-    mode: "0755"
-
+---
 - name: Configure tunnel manager
-  tags: network tunnel manager
+  tags:
+    - network_tunnel_manager
   become: true
   command:
     cmd: "/root/nym-binaries/network-tunnel-manager.sh {{ item }}"
   loop:
     - complete_networking_configuration
+  register: tunnel_mgr
+  failed_when: false
