--- a/common/cosmwasm-smart-contracts/mixnet-contract/Cargo.toml
+++ b/common/cosmwasm-smart-contracts/mixnet-contract/Cargo.toml
@@ -22,7 +22,7 @@ semver = { workspace = true, features = ["serde"] }
 # we still have to preserve that import for `JsonSchema` for `Layer` type (since we can't use cw_serde macro due to custom serde impl)
 schemars = { workspace = true }
 thiserror = { workspace = true }
-contracts-common = { path = "../contracts-common", package = "nym-contracts-common" }
+nym-contracts-common = { workspace = true }
 humantime-serde = { workspace = true }
 utoipa = { workspace = true, optional = true }
 
